fix grid in about page; add more spacing in mobile in about page

--- a/src/stylesheets/components/_about.scss
+++ b/src/stylesheets/components/_about.scss
@@ -2,16 +2,18 @@
   font-family: "Raleway", sans-serif;
   header {
     background-color: #f5f5f5;
-    height: 100vh;
-    padding: 0;
+    padding: 100px 0;
     img {
       width: 100%;
     }
 
     .container-fluid {
-      position: relative;
-      top: 50%;
-      transform: translateY(-50%);
+      @media (min-width: 1200px) {
+        height: 100vh;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+      }
     }
 
     h1 {
